--- a/Notebooks/models.ipynb
+++ b/Notebooks/models.ipynb
@@ -3410,11 +3410,72 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Label Powerset Exact match Accuracy: 0.7713091226756521\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>h1n1_vaccine</th>\n",
+       "      <th>seasonal_vaccine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15772</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9407</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16515</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23353</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10008</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       h1n1_vaccine  seasonal_vaccine\n",
+       "15772             0                 0\n",
+       "9407              0                 0\n",
+       "16515             0                 0\n",
+       "23353             0                 0\n",
+       "10008             0                 0"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3436,14 +3497,112 @@
     "\n",
     "model.fit(X_train, y_train_enc)\n",
     "\n",
-    "y_pred = pd.DataFrame(cat_model.predict(X_test), columns=labels)\n",
-    "print(f\"Label Powerset Exact match Accuracy: {np.mean(y_test[labels].values == y_pred[labels].values)}\")"
+    "y_pred_enc = model.predict(X_test).astype(int)\n",
+    "\n",
+    "h1n1_pred   = y_pred_enc // 2\n",
+    "seasonal_pred = y_pred_enc %  2\n",
+    "\n",
+    "y_pred = pd.DataFrame({\n",
+    "    'h1n1_vaccine':   h1n1_pred.flatten(),\n",
+    "    'seasonal_vaccine': seasonal_pred.flatten()\n",
+    "}, index=X_test.index) \n",
+    "\n",
+    "y_pred.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60e63207",
+   "id": "23585734",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>h1n1_vaccine</th>\n",
+       "      <th>seasonal_vaccine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15772</th>\n",
+       "      <td>0.126848</td>\n",
+       "      <td>0.237243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9407</th>\n",
+       "      <td>0.096643</td>\n",
+       "      <td>0.256146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16515</th>\n",
+       "      <td>0.069508</td>\n",
+       "      <td>0.519065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23353</th>\n",
+       "      <td>0.202915</td>\n",
+       "      <td>0.369270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10008</th>\n",
+       "      <td>0.166539</td>\n",
+       "      <td>0.449534</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       h1n1_vaccine  seasonal_vaccine\n",
+       "15772      0.126848          0.237243\n",
+       "9407       0.096643          0.256146\n",
+       "16515      0.069508          0.519065\n",
+       "23353      0.202915          0.369270\n",
+       "10008      0.166539          0.449534"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "proba_list = model.predict_proba(X_test)\n",
+    "P = np.vstack(proba_list) \n",
+    "p_h1n1     = P[:, 2] + P[:, 3]\n",
+    "p_seasonal = P[:, 1] + P[:, 3]\n",
+    "\n",
+    "y_pred_proba = pd.DataFrame({\n",
+    "    'h1n1_vaccine':     p_h1n1,\n",
+    "    'seasonal_vaccine': p_seasonal\n",
+    "}, index=X_test.index)\n",
+    "\n",
+    "y_pred_proba.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96925a5f",
    "metadata": {},
    "outputs": [],
    "source": []
