Final 1st Submission

--- a/Notebooks/final_model.ipynb
+++ b/Notebooks/final_model.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "980ccd40",
    "metadata": {},
    "outputs": [],
@@ -212,8 +212,8 @@
     "p_seasonal = P[:, 1] + P[:, 3]\n",
     "\n",
     "y_pred_proba = pd.DataFrame({\n",
-    "    'h1n1_vaccine':     p_h1n1,\n",
-    "    'seasonal_vaccine': p_seasonal\n",
+    "    'h1n1_vaccine':     np.round(p_h1n1,1),\n",
+    "    'seasonal_vaccine': np.round(p_seasonal,1)\n",
     "}, index=np.arange(26707,53415))\n",
     "\n",
     "y_pred_proba.to_csv(\"../data/submission1.csv\")"
