--- a/Notebooks/models.ipynb
+++ b/Notebooks/models.ipynb
@@ -3512,7 +3512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "id": "23585734",
    "metadata": {},
    "outputs": [
@@ -3544,28 +3544,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>15772</th>\n",
-       "      <td>0.126848</td>\n",
-       "      <td>0.237243</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9407</th>\n",
-       "      <td>0.096643</td>\n",
-       "      <td>0.256146</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16515</th>\n",
-       "      <td>0.069508</td>\n",
-       "      <td>0.519065</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23353</th>\n",
-       "      <td>0.202915</td>\n",
-       "      <td>0.369270</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10008</th>\n",
-       "      <td>0.166539</td>\n",
-       "      <td>0.449534</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3573,14 +3573,14 @@
       ],
       "text/plain": [
        "       h1n1_vaccine  seasonal_vaccine\n",
-       "15772      0.126848          0.237243\n",
-       "9407       0.096643          0.256146\n",
-       "16515      0.069508          0.519065\n",
-       "23353      0.202915          0.369270\n",
-       "10008      0.166539          0.449534"
+       "15772           0.1               0.2\n",
+       "9407            0.1               0.3\n",
+       "16515           0.1               0.5\n",
+       "23353           0.2               0.4\n",
+       "10008           0.2               0.4"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3592,8 +3592,8 @@
     "p_seasonal = P[:, 1] + P[:, 3]\n",
     "\n",
     "y_pred_proba = pd.DataFrame({\n",
-    "    'h1n1_vaccine':     p_h1n1,\n",
-    "    'seasonal_vaccine': p_seasonal\n",
+    "    'h1n1_vaccine':     np.round(p_h1n1, 1),\n",
+    "    'seasonal_vaccine': np.round(p_seasonal, 1)\n",
     "}, index=X_test.index)\n",
     "\n",
     "y_pred_proba.head()"
